Fix text spacing in abstract timeline

--- a/indico/htdocs/sass/modules/_reviewing.scss
+++ b/indico/htdocs/sass/modules/_reviewing.scss
@@ -344,6 +344,10 @@
             margin-right: 10px;
             flex-shrink: 0;
         }
+
+        &__track {
+            margin-right: 10px;
+        }
     }
 
     .i-box-footer {
